Add navbar with content and styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 </head>
 
 <body>
-  <h1>THIS IS A TEST</h1>
+  <nav class="navbar">
+    <a href="#" class="navbar-brand">
+      <img src="./assets/images/logo.svg" alt="">
+    </a>
+    <button class="btn nav-btn">
+      Try It Free
+    </button>
+  </nav>
 
 
   <!-- Bootstrap Scripts -->
