Add structure and content for main landing page section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
     </button>
   </nav>
 
+  <main>
+    <section class="landing-page">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- Landing page heading -->
+          <div class="col-12 col-md-6 section-content">
+            <h2 class="heading">Build the community your fans will love</h2>
+            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+            <button class="btn cta-btn">
+              Get Started For Free
+            </button>
+          </div>
+          <!-- Landing page image -->
+          <div class="col-12 col-md-6 section-image">
+            <img class="img-fluid" src="./assets/images/illustration-mockups.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 
   <!-- Bootstrap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
