Finish styles for landing page section

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="container-fluid">
         <div class="row">
           <!-- Landing page heading -->
-          <div class="col-12 col-md-6 section-content">
-            <h2 class="heading">Build the community your fans will love</h2>
-            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-            <button class="btn cta-btn">
+          <div class="col-12 col-md-6 section-content mt-5 mb-5">
+            <h2 class="heading mb-3">Build the community your fans will love</h2>
+            <p class="mb-4">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+            <button class="btn cta-btn bg-pink text-white">
               Get Started For Free
             </button>
           </div>
