Add and style grow together section, change order of image for mobiles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           <!-- Landing page heading -->
           <div class="col-12 col-md-6 section-content mt-5 mb-5">
             <h2 class="heading mb-3">Build the community your fans will love</h2>
-            <p class="mb-4">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+            <p class="mb-4">Huddle re-imagines the way we build communities. You have a voice, but so does your
+              audience. Create connections with your users as you engage in genuine discussion.</p>
             <button class="btn cta-btn bg-pink text-white">
               Get Started For Free
             </button>
@@ -43,6 +44,24 @@
           <!-- Landing page image -->
           <div class="col-12 col-md-6 section-image">
             <img class="img-fluid" src="./assets/images/illustration-mockups.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="grow-together">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- "Grow Together" heading -->
+          <div class="col-12 col-md-6 section-content mt-5 mb-5">
+            <h2 class="heading mb-3">Grow Together</h2>
+            <p class="mb-4">
+              Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+            </p>
+          </div>
+          <!-- Landing page image -->
+          <div class="col-12 col-md-6 section-image">
+            <img class="img-fluid" src="./assets/images/illustration-grow-together.svg" alt="">
           </div>
         </div>
       </div>
