Finish main content with styles, add classes to paragraphs for color

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </nav>
 
   <main>
+    <!-- Landing page section -->
     <section class="landing-page">
       <div class="container-fluid">
         <div class="row">
-          <!-- Landing page heading -->
           <div class="col-12 col-md-6 section-content mt-5 mb-5">
             <h2 class="heading mb-3">Build the community your fans will love</h2>
             <p class="mb-4">Huddle re-imagines the way we build communities. You have a voice, but so does your
@@ -49,19 +49,58 @@
       </div>
     </section>
 
+    <!-- "Grow Together" section -->
     <section class="grow-together">
       <div class="container-fluid">
         <div class="row">
-          <!-- "Grow Together" heading -->
           <div class="col-12 col-md-6 section-content mt-5 mb-5">
             <h2 class="heading mb-3">Grow Together</h2>
-            <p class="mb-4">
-              Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.
+            <p class="mb-4 text-gray-blue">
+              Generate meaningful discussions with your audience and build a strong, loyal community. Think of the
+              insightful conversations you miss out on with a feedback form.
             </p>
           </div>
           <!-- Landing page image -->
           <div class="col-12 col-md-6 section-image">
             <img class="img-fluid" src="./assets/images/illustration-grow-together.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- "Flowing Conversations" section -->
+    <section class="flowing-conversations">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-6 section-content mt-5 mb-5">
+            <h2 class="heading mb-3">Flowing conversations</h2>
+            <p class="mb-4 text-gray-blue">
+              You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time
+              loading for a more natural flow.
+            </p>
+          </div>
+          <!-- Landing page image -->
+          <div class="col-12 col-md-6 section-image">
+            <img class="img-fluid" src="./assets/images/illustration-flowing-conversation.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- "Your Users" section -->
+    <section class="your-users">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-6 section-content mt-5 mb-5">
+            <h2 class="heading mb-3">Your users</h2>
+            <p class="mb-4 text-gray-blue">
+              It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+              signed in to your app, your users can start chatting immediately.
+            </p>
+          </div>
+          <!-- Landing page image -->
+          <div class="col-12 col-md-6 section-image">
+            <img class="img-fluid" src="./assets/images/illustration-your-users.svg" alt="">
           </div>
         </div>
       </div>
