--- a/index.html
+++ b/index.html
@@ -107,6 +107,34 @@
     </section>
   </main>
 
+  <footer class="bg-dark-cyan">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="footer-logo">Huddle</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Contact Info -->
+        <div class="col-12 col-md-3">
+
+        </div>
+        <!-- First Links Group -->
+        <div class="col-12 col-md-3">
+
+        </div>
+        <!-- Second Links Group -->
+        <div class="col-12 col-md-3">
+
+        </div>
+        <!-- Social Icons -->
+        <div class="col-12 col-md-3">
+
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
   <!-- Bootstrap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
